[gd_scene load_steps=2 format=3 uid="uid://xou70oxixef3"]

[ext_resource type="Script" uid="uid://bv6xlwnihtru3" path="res://scripts/p2pform.gd" id="1_wabmg"]

[node name="P2Pform" type="Node2D"]
script = ExtResource("1_wabmg")

[node name="ServeLabel" type="Label" parent="."]
offset_left = 116.0
offset_top = 7.0
offset_right = 286.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 24

[node name="ServeButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 8.0
offset_right = 99.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 20
text = "serve"

[node name="JoinButton" type="Button" parent="."]
offset_left = 11.0
offset_top = 57.0
offset_right = 100.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 20
text = "join"

[node name="ClientLineEdit" type="LineEdit" parent="."]
offset_left = 112.0
offset_top = 56.0
offset_right = 283.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 24

[node name="SendButton" type="Button" parent="."]
offset_left = 12.0
offset_top = 110.0
offset_right = 101.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 20
text = "send"

[node name="SendLineEdit" type="LineEdit" parent="."]
offset_left = 113.0
offset_top = 109.0
offset_right = 846.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 24

[node name="LogLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 160.0
offset_right = 846.0
offset_bottom = 484.0
theme_override_font_sizes/font_size = 24
